k8s/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: truyencv-db
    tier: postgres
  ports:
    - port: 5432
  clusterIP: None


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truyencv-db
  labels:
    app: truyencv-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: truyencv-db
  strategy:
    type: Recreate
  template:
    metadata:
      name: truyencv-db
      labels:
        app: truyencv-db
        tier: postgres
    spec:
      containers:
        - name: truyencv-db
          image: postgres:16.3-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
