k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truyencv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8081
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app
                port:
                  number: 80
